tests/baselines/reference/genericOverloadSignatures.errors.txt
==== tests/cases/compiler/genericOverloadSignatures.ts (6 errors) ====
    interface A {
        <T>(x: T): void;
        <T>(x: T): void;
        ~~~~~~~~~~~~~~~
!!! error TS2146: Duplicate overload call signature.
    }
    
    function f<T>(a: T);
    function f<T>(a: T);
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2144: Duplicate overload signature for 'f'.
    function f(a) { }
    
    interface I2 {
        f<T>(x: T): number;
        f<T>(x: T): string;
        ~~~~~~~~~~~~~~~~~~
!!! error TS2175: Overloads cannot differ only by return type.
    }
    
    interface I3<T> {
        f(x: T): number;
        f(x: T): string;
        ~~~~~~~~~~~~~~~
!!! error TS2175: Overloads cannot differ only by return type.
    }
    
    class C2<T> {
    }
    var b: {
        new <T>(x: T, y: string): C2<T>;
        new <T>(x: T, y: string): C2<T>;
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2147: Duplicate overload construct signature.
    }
    
    interface D {
        <T>(x: T): T;
        <T>(x: T): T;
        ~~~~~~~~~~~~
!!! error TS2146: Duplicate overload call signature.
    }